NINE-506 - added drop wins slots translates

--- a/locales/cs.json
+++ b/locales/cs.json
@@ -428,7 +428,7 @@
     "dropsWinsSlots": {
       "title": "Drops<span class=\"Colored\"> & </span>Wins<br/> Slots",
       "name": "Drops & Wins Slots",
-      "text": "Welcome to the new Stage 5 of the Daily Drops & Wins Promotion. Pragmatic Play has decided to double a monthly Slots edition of Drops and Wins’ budget to €500,000! They are also increasing the number of monthly cash prizes and giving you even more chances to win. Take part in the exciting Drops & Wins and get a chance to win a share of the massive €4,000,000 in prizes!"
+      "text": "Vítejte v nové 5. fázi pro akce Daily Drops & Wins. Pragmatic Play se rozhodl zdvojnásobit měsíční sumu slotové edice Drops and Wins na 500 000 eur! Rovněž zvyšuje počet měsíčních peněžitých cen a nabízí větší šance na výhru. Zúčastněte se vzrušující Drops & Wins a získejte příležitost vyhrát část z neuvěřitelných 4 000 000 eur v některé z cen!"
     },
     "dropsWinsLive": {
       "title": "Drops<span class=\"Colored\"> & </span>Wins",
@@ -513,26 +513,26 @@
     ]
   },
   "dropsWinsSlots": {
-    "title": "Upgraded Drops & Wins Slots edition with the €4,000,000 prize pool",
-    "prize": "€ 4,000,000",
-    "text": "Welcome to the new Stage 5 of the Daily Drops & Wins Promotion. Pragmatic Play has decided to double a monthly Slots edition of Drops and Wins’ budget to €500,000! They are also increasing the number of monthly cash prizes and giving you even more chances to win. Take part in the exciting Drops & Wins and get a chance to win a share of the massive €4,000,000 in prizes! That’s why this time there are Weeks 17-20 of Weekly Tournaments and Daily Prize Drops with some new games!.",
-    "textMobile": "Welcome to the new Stage 5 of the Daily Drops & Wins Promotion. Pragmatic Play has decided to double a monthly Slots edition of Drops and Wins’ budget to €500,000!",
+    "title": "Aktualizovaná edice Drops & Wins Slots s prize poolem ve výši 4 000 000 eur",
+    "prize": "4 000 000 eur",
+    "text": "Vítejte v nové 5. fázi pro akce Daily Drops & Wins. Pragmatic Play se rozhodl zdvojnásobit měsíční sumu slotové edice Drops and Wins na 500 000 eur! Rovněž zvyšuje počet měsíčních peněžitých cen a nabízí větší šance na výhru. Zúčastněte se vzrušující Drops & Wins a získejte příležitost vyhrát část z neuvěřitelných 4 000 000 eur v některé z cen! Proto jsou tentokrát do týdnů 17–20 týdenních turnajů a denních výher zahrnuty některé nové hry!",
+    "textMobile": "Vítejte v nové 5. fázi pro akce Daily Drops & Wins. Pragmatic Play se rozhodl zdvojnásobit měsíční sumu slotové edice Drops and Wins na 500 000 eur!",
     "terms": [
       {
-        "title": "Stage 5 runs between",
-        "text": "● Week 17: 3rd June 2021 09:01 CEST – 9th June 2021 18:59 CEST<br/>● Week 18: 9th June 2021 19:01 CEST – 16th June 2021 18:59 CEST<br/>● Week 19: 16th June 2021 19:01 CEST – 23rd June 2021 18:59 CEST<br/>● Week 20: 23rd June 2021 19:01 CEST – 30th June 2021 18:59 CEST"
+        "title": ". Fáze 5 probíhá v termínu:",
+        "text": "● 17. týden: 3. června 2021 09:01 SELČ - 9. června 2021 18:59 SELČ<br/>● 18. týden: 9. června 2021 19:01 SELČ - 16. června 2021 18:59 SELČ<br/>● 19. týden: 16. června 2021 19:01 SELČ - 23. června 2021 18:59 SELČ<br/>● 20. týden: 23. června 2021 19:01 SELČ - 30. června 2021 18:59 SELČ"
       },
       {
-        "title": "Games in this tournament",
+        "title": "Hry zahrnuté do týdnů 17–20",
         "text": "Wolf Gold™, Mustang Gold™, Sweet Bonanza™, John Hunter and the Tomb of the Scarab Queen™, Great Rhino Megaways™, John Hunter and the Book of Tut™, The Dog House™, The Dog House Megaways™, Joker’s Jewels™, Chilli Heat™, Fruit Party™, Big Bass Bonanza™, Madame Destiny Megaways™, Gems Bonanza™, Wild Wild Riches™, The Hand of Midas™, Wild West Gold™, Gates of Olympus™, Fishin’ Reels™, Power of Thor Megaways™, Buffalo King Megaways™, Amazing Money Machine™, Phoenix Forge™, Cash Elevator ™, The Magic Cauldron – Enchanted Brew™."
       },
       {
-        "title": "Drops & Wins includes",
-        "text": "● Each Tournament runs for seven days from Thursday to Wednesday with daily Prize Drops in parallel.<br/>● Weekly prize pool of €62,000 in total across 1,200 cash prizes.<br/>● Players have an opportunity to win cash prizes in Daily prize drops with daily prize pool €9,000 across 500 cash prizes."
+        "title": "Drops & Wins zahrnuje",
+        "text": "● Každý turnaj běží od čtvrtka do středy souběžně s denním turnajem Prize Drops.<br/>● Týdenní prize pool 62 000 eur rozdělený na celkem 1 200 peněžitých cen.<br/>● Hráči mají příležitost vyhrát peněžité ceny v denních výhrách s prize poolem ve výši 9 000 eur, který bude rozdělený na 500 peněžitých cen."
       },
       {
-        "title": "How to win",
-        "text": "● Minimum bet requirement of €0.50.<br/>● In order to participate, players need to play with real money and make qualifying bets on any of the participating games.<br/>● In the Weekly tournaments - the highest single spin win amount adjusted for bet amount.<br/>● In the Daily tournaments - any real money spin in the participating games can trigger a random prize.<br/>● There is no additional cost for players to participate."
+        "title": "Jak vyhrát",
+        "text": "● Minimální požadovaná sázka činí 0,50 eura.<br/>● Aby se hráči mohli zapojit, musí hrát se skutečnými penězi a provést požadovanou sázku v jakékoliv ze zahrnutých her.<br/>● V týdenních turnajích – nejvyšší výhra za jeden spin upravená podle výše sázky.<br/>● V denních turnajích – jakýkoliv spin za skutečné peníze v zapojených hrách může vyvolat náhodnou cenu.<br/>● Hráčům nevznikají žádné další výdaje související s účastí."
       }
     ]
   },
