--- a/locales/fr_ca.json
+++ b/locales/fr_ca.json
@@ -433,7 +433,7 @@
     "dropsWinsSlots": {
       "title": "Drops<span class=\"Colored\"> & </span>Wins",
       "name": "Drops & Wins Slots",
-      "text": "Welcome to the new Stage 5 of the Daily Drops & Wins Promotion. Pragmatic Play has decided to double a monthly Slots edition of Drops and Wins’ budget to €500,000! They are also increasing the number of monthly cash prizes and giving you even more chances to win. Take part in the exciting Drops & Wins and get a chance to win a share of the massive €4,000,000 in prizes!"
+      "text": "Bienvenue à la nouvelle étape 5 de la promotion Drops & Wins quotidienne. Pragmatic Play a décidé de doubler le budget de l’édition mensuelle de Drops & Wins Slots à 500 000 €! Ils augmentent également le nombre de prix mensuels en argent et vous donnent encore plus de chances de gagner. Participez au passionnant Drops & Wins et courez la chance de gagner une part des 4 000 000 € de prix!"
     },
     "dropsWinsLive": {
       "title": "Drops<span class=\"Colored\"> & </span>Wins<br/> Live",
@@ -518,26 +518,26 @@
     ]
   },
   "dropsWinsSlots": {
-    "title": "Upgraded Drops & Wins Slots edition with the €4,000,000 prize pool",
+    "title": "Édition mise à jour de Drops & Wins Slots avec une cagnotte de 4 000 000 €",
     "prize": "€ 4,000,000",
-    "text": "Welcome to the new Stage 5 of the Daily Drops & Wins Promotion. Pragmatic Play has decided to double a monthly Slots edition of Drops and Wins’ budget to €500,000! They are also increasing the number of monthly cash prizes and giving you even more chances to win. Take part in the exciting Drops & Wins and get a chance to win a share of the massive €4,000,000 in prizes! That’s why this time there are Weeks 17-20 of Weekly Tournaments and Daily Prize Drops with some new games!.",
-    "textMobile": "Welcome to the new Stage 5 of the Daily Drops & Wins Promotion. Pragmatic Play has decided to double a monthly Slots edition of Drops and Wins’ budget to €500,000!",
+    "text": "Bienvenue à la nouvelle étape 5 de la promotion Drops & Wins quotidienne. Pragmatic Play a décidé de doubler le budget de l’édition mensuelle de Drops & Wins Slots à 500 000 €! Ils augmentent également le nombre de prix mensuels en argent et vous donnent encore plus de chances de gagner. Participez au passionnant Drops & Wins et courez la chance de gagner une part des 4 000 000 € de prix! C’est pourquoi, cette fois, les semaines 17–20 sont consacrées à des tournois hebdomadaires et à des remises de prix quotidiens avec de nouveaux jeux!",
+    "textMobile": "Bienvenue à la nouvelle étape 5 de la promotion Drops & Wins quotidienne. Pragmatic Play a décidé de doubler le budget de l’édition mensuelle de Drops & Wins Slots à 500 000 €!",
     "terms": [
       {
-        "title": "Stage 5 runs between",
-        "text": "● Week 17: 3rd June 2021 09:01 CEST – 9th June 2021 18:59 CEST<br/>● Week 18: 9th June 2021 19:01 CEST – 16th June 2021 18:59 CEST<br/>● Week 19: 16th June 2021 19:01 CEST – 23rd June 2021 18:59 CEST<br/>● Week 20: 23rd June 2021 19:01 CEST – 30th June 2021 18:59 CEST"
+        "title": "L’étape 5 se déroule ainsi",
+        "text": "● Semaine 17: 3 juin 2021 09:01 CEST – 9 juin 2021 18:59 CEST<br/>● Semaine 18: 9 juin 2021 19:01 CEST – 16 juin 2021 18:59 CEST<br/>● Semaine 19: 16 juin 2021 19:01 CEST – 23 juin 2021 18:59 CEST<br/>● Semaine 20: 23 juin 2021 19:01 CEST – 30 juin 2021 18:59 CEST"
       },
       {
-        "title": "Games in this tournament",
+        "title": "Jeux participants:",
         "text": "Wolf Gold™, Mustang Gold™, Sweet Bonanza™, John Hunter and the Tomb of the Scarab Queen™, Great Rhino Megaways™, John Hunter and the Book of Tut™, The Dog House™, The Dog House Megaways™, Joker’s Jewels™, Chilli Heat™, Fruit Party™, Big Bass Bonanza™, Madame Destiny Megaways™, Gems Bonanza™, Wild Wild Riches™, The Hand of Midas™, Wild West Gold™, Gates of Olympus™, Fishin’ Reels™, Power of Thor Megaways™, Buffalo King Megaways™, Amazing Money Machine™, Phoenix Forge™, Cash Elevator ™, The Magic Cauldron – Enchanted Brew™."
       },
       {
-        "title": "Drops & Wins includes",
-        "text": "● Each Tournament runs for seven days from Thursday to Wednesday with daily Prize Drops in parallel.<br/>● Weekly prize pool of €62,000 in total across 1,200 cash prizes.<br/>● Players have an opportunity to win cash prizes in Daily prize drops with daily prize pool €9,000 across 500 cash prizes."
+        "title": "Drops & Wins comprend",
+        "text": "● Chaque tournoi se déroule pendant sept jours, du jeudi au mercredi, avec des remises de prix quotidiennes en parallèle.<br/>● Une cagnotte hebdomadaire de 62 000 € au total, répartie sur 1 200 prix en argent.<br/>● Les joueurs ont l’occasion de gagner des prix en argent lors des remises de prix quotidiennes avec une cagnotte quotidienne de 9 000 € répartie en 500 prix en argent."
       },
       {
-        "title": "How to win",
-        "text": "● Minimum bet requirement of €0.50.<br/>● In order to participate, players need to play with real money and make qualifying bets on any of the participating games.<br/>● In the Weekly tournaments - the highest single spin win amount adjusted for bet amount.<br/>● In the Daily tournaments - any real money spin in the participating games can trigger a random prize.<br/>● There is no additional cost for players to participate."
+        "title": "Comment gagner",
+        "text": "● Mise minimale requise de 0,50 €.<br/>● Pour participer, les joueurs doivent jouer avec de l’argent réel et faire des paris qualifiants dans l’un des jeux participants.<br/>● Dans les tournois hebdomadaires, le plus haut montant de gain d’un seul tour ajusté au montant de la mise.<br/>● Dans les tournois quotidiens, tout tour en argent réel dans les jeux participants peut entraîner un prix aléatoire.<br/>● La participation des joueurs n’entraîne aucun coût supplémentaire."
       }
     ]
   },
