NINE-506 - fixed columns

--- a/locales/fr_ca.json
+++ b/locales/fr_ca.json
@@ -548,19 +548,19 @@
     "textMobile": "Pragmatic Play vous donne de plus en plus de chances de vous divertir en passant au niveau supérieur grâce à son nouveau Drops and Wins for Live Casino. Saisissez la chance de gagner une part de l’impressionnant montant de 3 000 000 € de prix en argent!",
     "terms": [
       {
-        "title": "L’étape 1 se déroule ainsi",
+        "title": "L’étape 1 se déroule ainsi<br/><br/>",
         "text": "● Semaine 1: 3 juin 2021 09:01 CEST – 9 juin 2021 18:59 CEST<br/>● Semaine 2: 9 juin 2021 19:01 CEST – 16 juin 2021 18:59 CEST<br/>● Semaine 3: 16 juin 2021 19:01 CEST – 23 juin 2021 18:59 CEST<br/>● Semaine 4: 23 juin 2021 19:01 CEST – 30 juin 2021 18:59 CEST"
       },
       {
-        "title": "Jeux/Tables participants",
-        "text": "<strong>Tournoi hebdomadaire de baccara:</strong><br/>Baccarat A (ID – 401), Baccarat B (ID – 404), Baccarat C (ID – 405), Baccarat D (ID – 411), Baccarat E (ID – 413), Speed Baccarat A (ID – 402), Speed Baccarat B (ID – 403), Speed Baccarat C (ID – 412), Speed Baccarat D (ID – 414), Speed Baccarat E (ID – 415).</strong><br/><br/><strong>Tournoi hebdomadaire de blackjack:</strong><br/>Live Blackjack A (ID – 301), Live Blackjack B (ID – 302), Live Blackjack C (ID – 303), Live Blackjack D (ID – 304), Live Blackjack E (ID – 305), Blackjack Azure A (ID – 511), Blackjack Azure B (ID – 512), Blackjack Azure C (ID – 513), Blackjack Azure D (ID – 514), Blackjack Azure E (ID – 515), Blackjack Azure F (ID – 516), Blackjack Azure G (ID – 517), Blackjack Azure H (ID – 518), Blackjack Azure I (ID – 519), Blackjack Azure J (ID – 520), ONE Blackjack (ID – 901).<br/><br/><strong>Tables to be added on 3rd June:</strong><br/>Blackjack 17 – Azure (ID – 521), Blackjack 18 – Azure (ID – 522), Blackjack 19 – Azure (ID – 523), Blackjack 20 – Azure (ID – 524), Blackjack 21 – Azure (ID – 525)<br/><br/><strong>Tournoi hebdomadaire de grande roue:</strong><br/>Mega Wheel (ID – 801)<br/><br/><strong>Tournoi hebdomadaire de roulette:</strong><br/>Auto-Roulette (ID – 225), Live Roulette A (ID – 201), Roulette Germany (ID – 222), Roulette Italy (ID – 223), Roulette Macao (ID – 206), Roulette Russia (ID – 221), Roulette Turkey (ID – 224), Speed Roulette (ID – 203), Roulette Azure (ID – 227), Mega Roulette (ID – 204) <strong>plus dedicated tables</strong>"
+        "title": "Jeux/Tables participants<br/><br/>",
+        "text": "<strong>Tournoi hebdomadaire de baccara:</strong><br/><br/>Baccarat A (ID – 401), Baccarat B (ID – 404), Baccarat C (ID – 405), Baccarat D (ID – 411), Baccarat E (ID – 413), Speed Baccarat A (ID – 402), Speed Baccarat B (ID – 403), Speed Baccarat C (ID – 412), Speed Baccarat D (ID – 414), Speed Baccarat E (ID – 415).</strong><br/><br/><strong>Tournoi hebdomadaire de blackjack:</strong><br/><br/>Live Blackjack A (ID – 301), Live Blackjack B (ID – 302), Live Blackjack C (ID – 303), Live Blackjack D (ID – 304), Live Blackjack E (ID – 305), Blackjack Azure A (ID – 511), Blackjack Azure B (ID – 512), Blackjack Azure C (ID – 513), Blackjack Azure D (ID – 514), Blackjack Azure E (ID – 515), Blackjack Azure F (ID – 516), Blackjack Azure G (ID – 517), Blackjack Azure H (ID – 518), Blackjack Azure I (ID – 519), Blackjack Azure J (ID – 520), ONE Blackjack (ID – 901).<br/><br/><strong>Tables to be added on 3rd June:</strong><br/><br/>Blackjack 17 – Azure (ID – 521), Blackjack 18 – Azure (ID – 522), Blackjack 19 – Azure (ID – 523), Blackjack 20 – Azure (ID – 524), Blackjack 21 – Azure (ID – 525)<br/><br/><strong>Tournoi hebdomadaire de grande roue:</strong><br/><br/>Mega Wheel (ID – 801)<br/><br/><strong>Tournoi hebdomadaire de roulette:</strong><br/><br/>Auto-Roulette (ID – 225), Live Roulette A (ID – 201), Roulette Germany (ID – 222), Roulette Italy (ID – 223), Roulette Macao (ID – 206), Roulette Russia (ID – 221), Roulette Turkey (ID – 224), Speed Roulette (ID – 203), Roulette Azure (ID – 227), Mega Roulette (ID – 204) <strong>plus dedicated tables</strong>"
       },
       {
         "title": "Drops & Wins comprend",
         "text": "Chaque tournoi se déroule sur sept (7) jours, du jeudi au mercredi.<br/><br/>Critères du tournoi : Valeur totale la plus élevée de tous les points reçus pour des gains consécutifs"
       },
       {
-        "title": "Mise minimale requise:",
+        "title": "Mise minimale requise:<br/><br/>",
         "text": "● Tournoi hebdomadaire de roulette: 0,5 €.<br/>● Tournoi hebdomadaire de blackjack: 0,5 €.<br/>● Tournoi hebdomadaire de grande roue: 0,5 €.<br/>● Tournoi hebdomadaire de baccara: 0,5 €."
       },
       {
