NINE-506 corrected texts

--- a/locales/cs.json
+++ b/locales/cs.json
@@ -514,7 +514,7 @@
   },
   "dropsWinsSlots": {
     "title": "Aktualizovaná edice Drops & Wins Slots s prize poolem ve výši 4 000 000 eur",
-    "prize": "4 000 000 eur",
+    "prize": "€ 4,000,000",
     "text": "Vítejte v nové 5. fázi pro akce Daily Drops & Wins. Pragmatic Play se rozhodl zdvojnásobit měsíční sumu slotové edice Drops and Wins na 500 000 eur! Rovněž zvyšuje počet měsíčních peněžitých cen a nabízí větší šance na výhru. Zúčastněte se vzrušující Drops & Wins a získejte příležitost vyhrát část z neuvěřitelných 4 000 000 eur v některé z cen! Proto jsou tentokrát do týdnů 17–20 týdenních turnajů a denních výher zahrnuty některé nové hry!",
     "textMobile": "Vítejte v nové 5. fázi pro akce Daily Drops & Wins. Pragmatic Play se rozhodl zdvojnásobit měsíční sumu slotové edice Drops and Wins na 500 000 eur!",
     "terms": [
