NINE-506 corrected texts

--- a/locales/de.json
+++ b/locales/de.json
@@ -519,8 +519,8 @@
     ]
   },
   "dropsWinsSlots": {
-    "title": "Aufgewertete Ausgabe von Drops & Wins Slots mit 4.000.000 € Preisgeld",
-    "prize": "€ 4,000,000",
+    "title": "Aufgewertete Ausgabe von Drops & Wins Slots mit 4.000.000&nbsp;€ Preisgeld",
+    "prize": "4.000.000 €",
     "text": "Willkommen zu Phase 5 der täglichen Drops & Wins Werbeaktion. Pragmatic Play verdoppelt die monatliche Slots-Ausgabe des Budgets von Drops And Wins auf 500.000 €! Außerdem wird die Anzahl der monatlichen Geldpreise erhöht und es gibt mehr Gelegenheiten auf Gewinne. Mach mit beim aufregenden Drops & Wins und erhalte die Chance, einen Anteil an dem massiven 4.000.000 € Preisgeld zu gewinnen! Deshalb gibt es diesmal in den Wochen 17–20 der Wöchentlichen Turniere und Täglichen Gewinnausspielungen mit einigen neuen Spielen!",
     "textMobile": "Willkommen zu Phase 5 der täglichen Drops & Wins Werbeaktion. Pragmatic Play verdoppelt die monatliche Slots-Ausgabe des Budgets von Drops And Wins auf 500.000 €!",
     "terms": [
@@ -543,8 +543,8 @@
     ]
   },
   "dropsWinsLive": {
-    "title": "Drops and Wins for Live Casino mit 3.000.000 € Preisgeld",
-    "prize": "€ 3,000,000",
+    "title": "Drops and Wins for Live Casino mit 3.000.000&nbsp;€ Preisgeld",
+    "prize": "3.000.000 €",
     "text": "Pragmatic Play bietet mehr und mehr Unterhaltung der nächsten Stufe mit seinem neuen Drops and Wins for Live Casino. Ergreife die Chance, einen Anteil am unglaublichen 3.000.000 € Preisgeld zu gewinnen!<br/><br/>Magst du Live-Spiele? Diese Live-Ausgabe wird dir gefallen. Mach mit bei wöchentlichen Turnieren – Roulette, Blackjack, Mega Wheel, Baccarat!",
     "textMobile": "Pragmatic Play bietet mehr und mehr Unterhaltung der nächsten Stufe mit seinem neuen Drops and Wins for Live Casino. Ergreife die Chance, einen Anteil am unglaublichen 3.000.000 € Preisgeld zu gewinnen!",
     "terms": [
