NINE-507 deleted words

--- a/locales/cs.json
+++ b/locales/cs.json
@@ -513,7 +513,7 @@
     ]
   },
   "dropsWinsSlots": {
-    "title": "Aktualizovaná edice Drops & Wins Slots s prize poolem ve výši 4&nbsp;000&nbsp;000&nbsp;eur",
+    "title": "Aktualizovaná edice Drops & Wins Slots",
     "prize": "4 000 000 eur",
     "text": "Vítejte v nové 5. fázi pro akce Daily Drops & Wins. Pragmatic Play se rozhodl zdvojnásobit měsíční sumu slotové edice Drops and Wins na 500 000 eur! Rovněž zvyšuje počet měsíčních peněžitých cen a nabízí větší šance na výhru. Zúčastněte se vzrušující Drops & Wins a získejte příležitost vyhrát část z neuvěřitelných 4 000 000 eur v některé z cen! Proto jsou tentokrát do týdnů 17–20 týdenních turnajů a denních výher zahrnuty některé nové hry!",
     "textMobile": "Vítejte v nové 5. fázi pro akce Daily Drops & Wins. Pragmatic Play se rozhodl zdvojnásobit měsíční sumu slotové edice Drops and Wins na 500 000 eur!",
@@ -537,7 +537,7 @@
     ]
   },
   "dropsWinsLive": {
-    "title": "Drops and Wins for Live Casino s prize poolem 3&nbsp;000&nbsp;000&nbsp;eur",
+    "title": "Drops and Wins for Live Casino",
     "prize": "3 000 000 eur",
     "text": "Pragmatic Play vám nabízí stále více příležitostí zábavy na nové úrovni díky nové Drops and Wins for Live Casino. Nenechte si ujít příležitost vyhrát podíl z neuvěřitelných 3 000 000 eur v hotovosti!<br/><br/>Máte rádi živé hry? Pak je tato živá akce určena právě pro vás. Zúčastněte se týdenních turnajů – ruleta, blackjack, Mega Wheel, Baccarat!",
     "textMobile": "Pragmatic Play gives you more and more opportunities to entertain yourself with the next level with its new Drops and Wins for Live Casino. Grab the chance to win a share of the impressive €3,000,000 in cash prizes!",
