--- a/locales/fr_ca.json
+++ b/locales/fr_ca.json
@@ -518,7 +518,7 @@
     ]
   },
   "dropsWinsSlots": {
-    "title": "Édition mise à jour de Drops & Wins Slots avec une cagnotte de 4&nbsp;000&nbsp;000&nbsp;€",
+    "title": "Édition mise à jour de Drops & Wins Slots",
     "prize": "4 000 000 €",
     "text": "Bienvenue à la nouvelle étape 5 de la promotion Drops & Wins quotidienne. Pragmatic Play a décidé de doubler le budget de l’édition mensuelle de Drops & Wins Slots à 500 000 €! Ils augmentent également le nombre de prix mensuels en argent et vous donnent encore plus de chances de gagner. Participez au passionnant Drops & Wins et courez la chance de gagner une part des 4 000 000 € de prix! C’est pourquoi, cette fois, les semaines 17–20 sont consacrées à des tournois hebdomadaires et à des remises de prix quotidiens avec de nouveaux jeux!",
     "textMobile": "Bienvenue à la nouvelle étape 5 de la promotion Drops & Wins quotidienne. Pragmatic Play a décidé de doubler le budget de l’édition mensuelle de Drops & Wins Slots à 500 000 €!",
@@ -542,7 +542,7 @@
     ]
   },
   "dropsWinsLive": {
-    "title": "Drops and Wins for Live Casino avec une cagnotte de 3&nbsp;000&nbsp;000&nbsp;€",
+    "title": "Drops and Wins for Live Casino",
     "prize": "3 000 000 €",
     "text": "Pragmatic Play vous donne de plus en plus de chances de vous divertir en passant au niveau supérieur grâce à son nouveau Drops and Wins for Live Casino. Saisissez la chance de gagner une part de l’impressionnant montant de 3 000 000 € de prix en argent!<br/><br/>Aimez-vous les jeux en direct? Cette édition en direct vous ira à coup sûr. Participez aux tournois hebdomadaires  - Roulette, Blackjack, Grande Roue, Baccarat!",
     "textMobile": "Pragmatic Play vous donne de plus en plus de chances de vous divertir en passant au niveau supérieur grâce à son nouveau Drops and Wins for Live Casino. Saisissez la chance de gagner une part de l’impressionnant montant de 3 000 000 € de prix en argent!",
